[package]
name = "mini_blog"
version = "0.1.0"
authors = ["yumin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.0"
log = "0.4.11"
env_logger = "0.8.1"
chrono = "0.4.19"
r2d2 = "0.8.2"
r2d2_sqlite = "0.17.0"
rusqlite = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.1"
failure = "0.1.7"
